--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+@import url('//fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap');
+
+body{
+    display:block;
+    margin:0 auto;
+    padding:0;
+    color:#B0B3B5;
+    font-size:14px;
+    overflow-x:hidden;
+    font-family:'Lato', sans-serif;
+    background-color:#171717;
+    box-sizing:border-box;
+}
+
