full page design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,10 @@
 <app-header></app-header>
 <!--Header Close-->
 
+<!--Modal Open-->
+<app-modal-connect></app-modal-connect>
+<!--Modal Close-->
+
 <!--Content Open-->
 <app-slider-content></app-slider-content>
 <!--Content Close-->
