--- a/src/app/component/slider-content/slider-content.component.html
+++ b/src/app/component/slider-content/slider-content.component.html
@@ -9,14 +9,14 @@
             </div>
             <!--Slider Open-->
             <div class="contentSlider">
-                <ngb-carousel *ngIf="images">
+                <ngb-carousel>
                     <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
-                            <img [src]="images[0]" alt="Random first slide">
-                        </div>
-                        <div class="carousel-caption">
-                            <h3>Developed by UBOX TEAM</h3>
-                            <p>Interactive product display</p>
+                            <img src="assets/images/m-ban-1.png" alt="Random first slide">
+                            <div class="carousel-caption">
+                                <h3>Developed by <strong>UBOX TEAM</strong></h3>
+                                <p>Interactive product display</p>
+                            </div>
                         </div>
                         <div class="carousel-details">
                             <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
@@ -24,23 +24,11 @@
                     </ng-template>
                     <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
-                            <img [src]="images[1]" alt="Ubox Slider">
-                        </div>
-                        <div class="carousel-caption">
-                            <h3>Developed by UBOX TEAM</h3>
-                            <p>Interactive product display</p>
-                        </div>
-                        <div class="carousel-details">
-                            <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-                        </div>
-                    </ng-template>
-                    <ng-template ngbSlide>
-                        <div class="picsum-img-wrapper">
-                            <img [src]="images[2]" alt="Ubox Slider">
-                        </div>
-                        <div class="carousel-caption">
-                            <h3>Developed by UBOX TEAM</h3>
-                            <p>Lorem ipsum</p>
+                            <img src="assets/images/m-ban-2.png" alt="Ubox Slider">
+                            <div class="carousel-caption">
+                                <h3>Developed by <strong>UBOX TEAM</strong></h3>
+                                <p>Interactive product display</p>
+                            </div>
                         </div>
                         <div class="carousel-details">
                             <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
@@ -48,11 +36,11 @@
                     </ng-template>
                     <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
-                            <img [src]="images[3]" alt="Ubox Slider">
-                        </div>
-                        <div class="carousel-caption">
-                          <h3>Developed by UBOX TEAM</h3>
-                          <p>Interactive product display</p>
+                            <img src="assets/images/m-ban-3.png" alt="Ubox Slider">
+                            <div class="carousel-caption">
+                                <h3>Developed by <strong>UBOX TEAM</strong></h3>
+                                <p>Lorem ipsum</p>
+                            </div>
                         </div>
                         <div class="carousel-details">
                             <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
@@ -60,11 +48,23 @@
                     </ng-template>
                     <ng-template ngbSlide>
                         <div class="picsum-img-wrapper">
-                            <img [src]="images[2]" alt="Ubox Slider">
+                            <img src="assets/images/m-ban-4.png" alt="Ubox Slider">
+                            <div class="carousel-caption">
+                                <h3>Developed by <strong>UBOX TEAM</strong></h3>
+                                <p>Interactive product display</p>
+                              </div>
                         </div>
-                        <div class="carousel-caption">
-                            <h3>Developed by UBOX TEAM</h3>
-                            <p>Interactive product display</p>
+                        <div class="carousel-details">
+                            <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+                        </div>
+                    </ng-template>
+                    <ng-template ngbSlide>
+                        <div class="picsum-img-wrapper">
+                            <img src="assets/images/m-ban-5.png" alt="Ubox Slider">
+                            <div class="carousel-caption">
+                                <h3>Developed by <strong>UBOX TEAM</strong></h3>
+                                <p>Interactive product display</p>
+                            </div>
                         </div>
                         <div class="carousel-details">
                             <p>Lorem Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labor et dolore. At vero eos et accusam et justo duo dolores et ea rebum.</p>
