--- a/src/app/component/slider-content/slider-content.component.scss
+++ b/src/app/component/slider-content/slider-content.component.scss
@@ -8,10 +8,10 @@
     float:none;
     .contentInner{
         display:block;
-        margin:0 auto;
-        padding:0;
+        margin:0 auto 40px;
+        padding:0 20px;
         width:100%;
-        max-width:500px;
+        max-width:390px;
         background-color:transparent;
         float:none;
         text-align:center;
@@ -63,9 +63,87 @@
         .contentSlider{
             display:block;
             margin:0 auto;
-            padding:40px 0;
+            padding:20px 0 80px;
             width:auto;
-            max-width:100%;
+            max-width:300px;
+            .picsum-img-wrapper{
+                display:block;
+                margin:0 auto;
+                padding:0;
+                width:100%;
+                position:relative;
+                border-radius:10px;
+                -moz-border-radius:10px;
+                -webkit-border-radius:10px;
+                img{
+                    border-radius:10px;
+                    -moz-border-radius:10px;
+                    -webkit-border-radius:10px;
+                    max-width:100%;
+                }
+                .carousel-caption{
+                    bottom:0;
+                    left:0;
+                    right:auto;
+                    width:100%;
+                    padding-left:20px;
+                    padding-right:20px;
+                    background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.75) 70%, rgba(0,0,0,0.9) 100%); 
+                    background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 70%,rgba(0,0,0,0.9) 100%); 
+                    background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.75) 70%,rgba(0,0,0,0.9) 100%); 
+                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#e6000000',GradientType=0 ); 
+                    -webkit-border-bottom-right-radius:10px;
+                    -webkit-border-bottom-left-radius:10px;
+                    -moz-border-radius-bottomright:10px;
+                    -moz-border-radius-bottomleft:10px;
+                    border-bottom-right-radius:10px;
+                    border-bottom-left-radius:10px;
+                    text-align:left;
+                    h3{
+                        font-size:14px;
+                        font-weight:400;
+                        font-style:normal;
+                        color:#B0B3B5;
+                        padding:0;
+                        margin:0 auto 10px;
+                        text-align:left;
+                        font-family:'Lato', sans-serif;
+                        strong{
+                            font-weight:700; 
+                            text-transform:uppercase;
+                        }
+                    }
+                    p{
+                        font-size:18px;
+                        font-weight:700;
+                        font-style:normal;
+                        color:#ffffff;
+                        padding:0;
+                        margin:0 auto 10px;
+                        text-align:left;
+                        font-family:'Lato', sans-serif;
+                    }
+                }
+            }
+            .carousel-details{
+                display:block;
+                margin:0 auto;
+                padding:20px 0 40px;
+                width:100%;
+                max-width:100%;
+                p{
+                    font-family:'Nunito', sans-serif;
+                    font-weight:400;
+                    font-style:normal;
+                    display:block;
+                    margin:0 auto;
+                    padding:0;
+                    width:100%;
+                    max-width:100%;
+                    text-align:left;
+                    color:#B0B3B5;
+                }
+            }
         }
     }
 }
