--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,122 @@ body{
     box-sizing:border-box;
 }
 
+.contentSlider .carousel.slide .carousel-indicators{
+    margin-bottom:0 !important;
+}
+.contentSlider .carousel.slide .carousel-indicators button{
+    border-radius:12px;
+    -moz-border-radius:12px;
+    -webkit-border-radius:12px;
+    background-color:#FFFFFF1A;
+    height:6px;
+}
+.contentSlider .carousel.slide .carousel-indicators button.active{
+    background-color:#359FD3;
+}
+.contentSlider .carousel.slide .carousel-control-prev, .contentSlider .carousel.slide .carousel-control-next{
+    bottom:-60px;
+    top:auto;
+    height:47px;
+    background-color:#272727;
+    color:#359FD3;
+    width:calc(50% - 10px);
+    border-radius:10px;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    border:4px solid #404040;
+    opacity:1;
+    span{
+        color:#359FD3;
+        width:14px;
+        height:23px;
+        background-repeat:no-repeat;
+    }
+}
+.contentSlider .carousel.slide .carousel-control-prev{
+    margin-right: 10px;
+    span{
+        background-image:url('assets/images/IconLeft.png');
+    }
+    
+}
+.contentSlider .carousel.slide .carousel-control-next{
+    margin-left: 10px;
+    span{
+        background-image:url('assets/images/IconRight.png');
+    }
+}
+.blur-backdrop{
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+}
+.connection-modal{
+    border:none;
+    box-shadow:none;
+    background-color:transparent;
+    .modal-content{
+        border:none;
+        box-shadow:none;
+        background-color:transparent;
+        .modal-body{
+            background-color:#2E2E2E !important;
+            border:none;
+            box-shadow:none;
+            border-radius:12px;
+            -moz-border-radius:12px;
+            -webkit-border-radius:12px;
+            h4{
+                display:block;
+                margin:15px auto 15px;
+                padding:0;
+                color:#fff;
+                font-size:22px;
+                font-weight:700;
+                font-style:normal;
+                text-align:center;
+            }
+            p{
+                display:block;
+                font-family:'Nunito', sans-serif;
+                margin:0 auto 30px;
+                padding:0;
+                color:#B0B3B5;
+                font-size:14px;
+                font-weight:400;
+                font-style:normal;
+                text-align:center;
+            }
+            h5{
+                display:block;
+                font-family:'Nunito', sans-serif;
+                margin:0 auto 25px;
+                padding:0;
+                color:#B0B3B5;
+                font-size:14px;
+                font-weight:400;
+                font-style:normal;
+                text-align:center;
+                span{
+                    color:#FFFFFF;
+                    font-weight:700;
+                }
+            }
+            .btn.btn-outline-dark{
+                background-color: #FFFFFF;
+                color: #000000;
+                font-family:'Nunito', sans-serif;
+                font-size:16px;
+                font-weight:700;
+                font-style:normal;
+                border-radius:30px;
+                -moz-border-radius:30px;
+                -webkit-border-radius:30px;
+                width: 100%;
+            }
+        }
+        @media screen and (max-width:575px) {
+            max-width: 300px;
+            margin:0 auto;
+        }
+    }
+}
